   prognostic melt-pond fraction and wet/dry snow flag).

 - solar radiation penetration through sea ice now wavelength dependent

 - the basal fluxes between the ice and ocean are calculated using a new
   turbulence scheme. New routines UNDERICE, iceocean, icelake.

 - parallelisation directives for atmospheric model

 - changes to boundary layer cloud specifications

 - improvements to turbulence calculations

 - fix for mass fluxes over topography to prevent unrealistic
   precipitation hotspots

 - Multiple vertical resolutions available

 - new interface for radiation to allow more control of greenhouse
   gases, aerosols etc. from rundeck.

 - Adjustable input of CH4 related stratospheric water vapour

 - Numerous parameters for the gravity wave drag  adjustable from the rundeck 

Coupled Model:

 - Gary's ocean model now fully coupled (plug and play option)

 - Ocean heat transport diagnostic in printout

 - much more extensive ocean diagnostics

Tracer code:

 - tracer code for air mass and water mass tracers (uses preprocessing
   directives set from the run deck)

 - wet/dry deposition code for general tracers (aerosols, particles,
   water and soluble gases)

 - multiple example tracers pre-coded

Diagnostics: 

 - Numerous errors in diagnostic printout fixed

 - Re-arrangement of budget pages to provide more relevant info.

 - Conservation diagnostics for AM and KE actually add up.

Run Envrionment:

 - .modelErc file in home directory to enable a configuration to set
   up a local distribution on any machine

 - automatic compilation of online documentation for any particular
   configuration. 

 - new 'lock' file method for preventing un-intended writing over of files.

 - MUST USE COMMANDS 'runE' and 'sswE' to start and stop model

 - automatic re-starting with smaller timestep for some crashes (set from 
   initial rundeck)

Major Changes from Model II' to modelE-1-3-3
============================================
